# Prompt-Engineering-Toolkit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  demo.py  pyproject.toml  requirements.txt  setup.py
config/: default.yaml
data/: advanced_prompts.json  comprehensive_prompts.json  defense_strategies.json  extended_prompts.json
docs/: API_REFERENCE.md  CONTRIBUTING.md  INSTALLATION.md  README.md  USER_GUIDE.md  usage_guide.md
examples/: basic_testing.py  basic_usage.py  create_custom_suite.py  model_comparison.py
scripts/: deploy.sh  run_benchmark.py
src/pet/: __init__.py  cli.py  evaluator.py  prompt_manager.py  test_runner.py
src/pet/core/: config.py  evaluator.py  prompt_manager.py  test_runner.py
src/pet/models/: __init__.py
tests/: conftest.py  test_evaluator.py  test_prompt_manager.py
